repos/emily-python/contents/test/parser/fail/importAtom.em
# Import atom where that's meaningless

# Arg: --ast2
# Expect failure

from z import .a
